--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,26 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.container {
+    padding: 32px;
+}
+/* 
+
+NAVIGATION
+
+*/
+
+.logo {
+    width: 50px;
+}
