navigation bar fixed

--- a/styles.css
+++ b/styles.css
@@ -15,53 +15,58 @@ li {
     list-style-type: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 .row {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-}
-
-.container {
     padding: 32px;
 }
-
 
 /* 
 
 NAVIGATION
 
 */
-.nav__link {
-    margin-left: 16px;
-    text-decoration: none;
-    font-size: 24px;
-    justify-content: center;
-    padding-left: ;
 
+.logo {
+    width: 50px;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0 12px 0 0;
 }
 
-.nav__links {
+
+.logo__text {
+    font-size: 24px;
+    font-weight: bold;
+    /*padding-right: 560px;*/
+}
+
+.logo__text:hover {
+    color: #6415ff;
+    cursor: pointer;
+}
+
+.nav__bar,
+.nav__links,
+.logo__text {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #243e63;
 }
 
-.logo {
-    width: 50px;
+.nav__link {
+    margin: 0px 24px;
+    text-decoration: none;
     font-size: 24px;
-    font-weight: bold;
-}
+    justify-content: center;
+    
 
-.logo__text {
-    font-size: 24px;
-    font-weight: bold;
-    padding-right: 560px;
-}
-
-.logo__text:hover {
-    color: #6415ff;
-    cursor: pointer;
 }
 
 .nav__link--primary {
