--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ p {
 
 input {
     padding: 20px 192px 20px 32px;
-    
+
 }
 
 /* 
@@ -141,3 +141,4 @@ HEADER
     margin: 80px 0px 0px;
 }
 
+/* fix the button and make it inside
