--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,9 @@ p {
 
 input {
     padding: 20px 192px 20px 32px;
+    border-radius: 24px;
+    width: 100%;
+    font-weight: 500;
 
 }
 
@@ -131,9 +134,11 @@ HEADER
 }
 
 .header__button {
-    color: #fff3;
+    background-color: rgba(100,21,255);
+    color: #fff;
     margin: 8px 8px 8px 0px;
     padding: 16px 0;
+
 
 }
 
