--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ button {
     border-radius: 70px;
     color: #fff;
     font-size: 16px;
-    border: none;
+    border: 2px solid #e5e7eb;
 }
 
 button:hover {
