--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
 textarea, input {
     outline: none;
+    color: #e5e7eb;
 }
 
 html {
@@ -137,6 +138,7 @@ HEADER
     width: 512px;
     display: flex;
     align-items: center;
+    margin-left: 80px;
 }
 
 .txt_trusted {
@@ -161,6 +163,7 @@ HEADER
 
 .header__email {
     display: flex;
+    position: absolute;
 }
 
 .header__columns--right {
@@ -169,6 +172,10 @@ HEADER
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.header__columns--left {
+    max-width: 45%;
 }
 
 .header__h1 {
@@ -193,8 +200,9 @@ textarea, .header__input:focus {
     border-color: none;
 }
 
+
 .header__button {
-    
+    position: absolute;
     right: 0px;
     top: 0px;
     bottom: 0px;
@@ -208,7 +216,7 @@ textarea, .header__input:focus {
 }
 
 .header__trusted {
-    margin: 80px 0px 0px;
+    margin: 120px 0px 0px;
     padding: 0px;
 }
 
