--- a/styles.css
+++ b/styles.css
@@ -255,3 +255,4 @@ FEATURES
 /* help with the button and put it inside */
 /* help with the button and put it inside */
 /* tests adding comments */
+/* fix and make it to the middle center in features section */
