--- a/styles.css
+++ b/styles.css
@@ -241,12 +241,14 @@ FEATURES
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0px 26px; 
 }
 
 .features__title {
     font-size: 18px;
     letter-spacing: 0.1em;
     margin: 0px 0px 16px;
+    
 }
 
 .features__title, .features__title--services, .features__para {
@@ -267,21 +269,32 @@ FEATURES
     font-size: 18px;
 }
 
-.features__column--right{
-    margin: 8px 0 0 16px;
+.features__column--wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .features__column--services {
     display: flex;
-    width: 300px;
+    width: 320px;
+    padding: 32px 8px;
+    margin: 0px 16px;
+}
+
+.features__column--right{
+    margin: 8px 0 0 16px;
 }
 
 .features__column--title {
     font-size: 24px;
+    font-weight: bold;
 }
 
 .features__column--description {
     margin: 16px 0 0;
+    color: #7C8BA1;
+    line-height: 2;
 }
 
 .imageContainer {
