--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ h2 {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 32px;
+    padding: 0 32px;
 }
 
 .purple {
@@ -242,6 +242,7 @@ FEATURES
     justify-content: center;
     align-items: center;
     margin: 0px 26px; 
+    padding: 96px 0;
 }
 
 .features__title {
