--- a/styles.css
+++ b/styles.css
@@ -360,7 +360,7 @@ QUALITY
     width: 555px;
     outline: 1px solid #c4c6ca;
 }
-
+/* add some random txt */
 
 
 /* help with the button and put it inside */
