--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
     text-decoration: none;
+    border-width: 0px;
 }
 
 *, ::after, ::before {
@@ -517,17 +518,51 @@ PRICING
 .pricing__para {
     margin: 16px 0 0 0;
     text-align: center;
-    width: 45%;
+    width: 55%;
 }
 
 /* Plans */
 
 .plans__container {
     /* for the three row containers */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 
-.personal__container {
 
+.plans__colours {
+    width: 100%;
+    height: 2vh;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    top: 0px;
+    left: 0px;
+    right: 0px
+}
+
+.gradient__green, .plans__button {
+    background-image: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+}
+
+.threeplans__wrapper {
+    margin: 64px 32px 0 0;
+    padding: 8px 32px 0 32px;
+}
+
+.plans__container--mid {
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-style: solid;
+    border-color: #CBD5E0;
+}
+.plans__container--top, .plans__container {
+    padding: 32px 0;
+}
+
+.plans__container--mid, .plans__container--btm {
+    padding: 32px;
 }
 
 .plans__container--top, .plans__container--mid, .plans__container--btm, .plans__features--container {
@@ -535,8 +570,41 @@ PRICING
     flex-direction: column;
 }
 
-.plans
+.plans__title, .plans__title--pricing, .plans__features--title {
+    color: #1A202C;
+}
 
+.plans__title, .plans__title--pricing, .plans__features--title, .plans__title--monthly {
+    font-weight: 700;
+}
+
+.plans__title {
+
+
+    font-size: 1.25rem;
+}
+
+.plans__title--pricing {
+    font-size: 48px;
+    margin: 4px 0;
+}
+
+.plans__title--monthly {
+    color: #A0AEC0;
+    font-size: 16px;
+    letter-spacing: 0.1em;
+
+}
+
+.plans__features--title {
+    font-size: 20px;
+}
+
+.plans__features--list {
+    color: #718096;
+    font-weight: 500;
+    margin-top: 1.25rem;
+}
 /* add some random txt */
 
 
