--- a/styles.css
+++ b/styles.css
@@ -521,6 +521,9 @@ PRICING
     width: 55%;
 }
 
+.pricing__row {
+    padding: 96px 0;
+}
 /* Plans */
 
 .plans__container {
@@ -548,7 +551,7 @@ PRICING
 
 .threeplans__wrapper {
     margin: 64px 32px 0 0;
-    padding: 8px 32px 0 32px;
+    /*padding: 8px 32px 0 32px;*/
 }
 
 .plans__container--mid {
@@ -557,7 +560,7 @@ PRICING
     border-style: solid;
     border-color: #CBD5E0;
 }
-.plans__container--top, .plans__container {
+.plans__container--top {
     padding: 32px 0;
 }
 
