--- a/styles.css
+++ b/styles.css
@@ -612,11 +612,8 @@ PRICING
     font-weight: 500;
     margin-top: 1.25rem;
 }
-/* add some random txt */
 
-
-
-/* help with the button and put it inside */
-/* help with the button and put it inside */
-/* tests adding comments */
-/* fix and make it to the middle center in features section */
+/* fix the icon svg position
+add shade/shadow to the pricing options
+make the plan containers the same width
+*/
