--- a/styles.css
+++ b/styles.css
@@ -616,4 +616,5 @@ PRICING
 /* fix the icon svg position
 add shade/shadow to the pricing options
 make the plan containers the same width
+added comments
 */
