--- a/styles.css
+++ b/styles.css
@@ -654,5 +654,6 @@ make the plan containers the same width
 when you make the page smaller, the text of 
 "buy now" doesn't fit in the button
 added comments
+hjow to
 added comments
 */
