--- a/styles.css
+++ b/styles.css
@@ -751,6 +751,7 @@ FAQS
 
 .accordion {
     max-width: 800px;
+
 }
 
 .accordion .contentBx {
@@ -763,26 +764,32 @@ FAQS
     background: #EDF2F7;
     color: #1A202C;
     font-weight: 600;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
     cursor: pointer;
 }
 
 .accordion .contentBx .label::before {
-    content: '+';
+    content: url(./assets/arrow.svg);
+    width: 1.5rem;
+    height: 1.5rem;
+    display: incline-flex;
     position: absolute;
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
-    font-size: 1.5em;
+    
 }
 
 .accordion .contentBx.active .label::before {
-    content: '-';
+    content: '+';
+    position: absolute;
+    top: 50%;
+    right: 20px;
 }
 
 .accordion .contentBx .content {
     position: relative;
-    background: #d4d8dd;
+    background: #e9edf2;
     height: 0;
     overflow: hidden;
     transition: 0.5s;
@@ -794,6 +801,9 @@ FAQS
     padding: 10px;
 }
 
+.accordion .contentBx .content:hover {
+    color: #d4d8dd;
+}
 /*
 
 Developers 
